# junkyard

./: Cargo.toml  README.md  visual.toml
slides/: package-lock.json  package.json
slides/presentation/: junkyard.md  slides.md
slides/presentation/setup/: shiki.ts
slides/wasm-plugins/: README.md  package-lock.json  package.json
slides/wasm-plugins/presentation/: elements.md  junkyard.md  plugin.md  slides.md  wasm_components.md  wasm_core.md
src/: main.rs  panel.rs
